Added update scripts

--- a/circle.yml
+++ b/circle.yml
@@ -33,3 +33,10 @@ dependencies:
 test:
   override:
     - ls
+
+
+deployment:
+  pantheon:
+    branch: /.*/
+    commands:
+      - ./bin/deploy_to_pantheon.sh
